k8s/platform/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: navidrome-route
  namespace: navidrome-platform
spec:
  parentRefs:
  - name: navidrome-gateway
  rules:
  - backendRefs:
    - name: navidrome-app
      namespace: navidrome-production
      port: 8080
      weight: 90
    - name: navidrome-app
      namespace: navidrome-canary
      port: 8081
      weight: 10
